--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "license": "ISC",
   "homepage": "https://github.com/mjun0328/Study_Node.js#readme",
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "sanitize-html": "^2.11.0"
   }
