--- a/express/package.json
+++ b/express/package.json
@@ -1,26 +1,16 @@
 {
-  "name": "study_node",
-  "version": "1.0.0",
-  "description": "Node.js 기초 스터디",
-  "main": "main.js",
-  "directories": {
-    "lib": "lib"
-  },
+  "name": "express",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mjun0328/Study_Node.js.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "homepage": "https://github.com/mjun0328/Study_Node.js#readme",
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "compression": "^1.7.4",
-    "express": "^4.18.2",
-    "helmet": "^7.0.0",
-    "sanitize-html": "^2.11.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
