--- a/express-passport/package.json
+++ b/express-passport/package.json
@@ -25,6 +25,8 @@
     "express": "^4.16.3",
     "express-session": "^1.17.3",
     "helmet": "^3.12.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sanitize-html": "^1.18.2",
     "session-file-store": "^1.5.0"
   }
